# Squid_Game_Raylib

./: CMakeLists.txt
src/: gameobject.c  gameobject.h  globals.c  globals.h  main.c  player.c  player.h  playercam.c  playercam.h  projectile.c  projectile.h  spritemanager.c  spritemanager.h  squid.c  squid.h
src/management/: playercam.c  playercam.h  spritemanager.c  spritemanager.h
src/objects/: gameobject.c  gameobject.h  player.c  player.h  projectile.c  projectile.h
